[package]
name = "secp256k1"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = []
custom-heap = []
no-entrypoint = []

[dependencies]
solana-account-info = "3.1.1"
solana-keccak-hasher = { version = "3.1.0", features = ["sha3"] }
solana-program-entrypoint = "3.1.1"
solana-program-error = "3.0.1"
solana-pubkey = "4.1.0"
solana-secp256k1-program = { git = "https://github.com/anza-xyz/solana-sdk", rev = "70ed9d2c654bd1f1181db5295632e17bba208b8b", default-features = false }
solana-secp256k1-recover = "3.1.1"

[dev-dependencies]
k256 = "0.13.4"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("custom-panic"))',
] }
