[workspace]
members = ["program"]
resolver = "2"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("custom-panic"))',
] }

[workspace.dependencies]
k256 = "0.13.4"
mollusk-svm = "0.12.0"
solana-account-info = "3.1.1"
solana-address = "2.6.0"
solana-instruction = "3.4.0"
solana-keccak-hasher = { version = "3.1.0", features = ["sha3"] }
solana-program-entrypoint = "3.1.1"
solana-program-error = "3.0.1"
solana-pubkey = "4.1.0"
# todo: use crate.io version when it is published
solana-secp256k1-program-sdk = { package = "solana-secp256k1-program", git = "https://github.com/anza-xyz/solana-sdk", rev = "70ed9d2c654bd1f1181db5295632e17bba208b8b", default-features = false }
solana-secp256k1-recover = "3.1.1"
