[workspace]
members = ["program"]
resolver = "2"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(target_arch, values("bpf"))',
    'cfg(feature, values("custom-panic"))',
] }

[workspace.dependencies]
bincode = "1.3.3"
k256 = "0.13.4"
mollusk-svm = "0.12.0"
serde = { version = "1.0.228", default-features = false }
serde_derive = "1.0.228"
solana-account-info = "3.1.1"
solana-address = "2.6.0"
solana-instruction = "3.4.0"
solana-keccak-hasher = { version = "3.1.0", features = ["sha3"] }
solana-program-entrypoint = "3.1.1"
solana-program-error = "3.0.1"
solana-pubkey = "4.1.0"
solana-sdk-ids = "3.1.0"
solana-secp256k1-recover = "3.1.1"
solana-signature = "3.4.0"
