[package]
name = "solana-secp256k1-program"
version = "4.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
no-entrypoint = []

[dependencies]
solana-account-info = { workspace = true }
solana-keccak-hasher = { workspace = true }
solana-program-entrypoint = { workspace = true }
solana-program-error = { workspace = true }
solana-pubkey = { workspace = true }
solana-secp256k1-program-sdk = { workspace = true }
solana-secp256k1-recover = { workspace = true }
solana-zero-copy = { workspace = true }

[dev-dependencies]
k256 = { workspace = true }
mollusk-svm = { workspace = true }
solana-address = { workspace = true }
solana-instruction = { workspace = true }

[lints]
workspace = true
